# Pyntel4004-CLI

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  4004cli.py  CHANGELOG.md  README.md  config.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: build-pyntel4004-cli  build-pyntel4004-cli.yml
docs/: cli.rst  conf.py  global.rst  index.rst  intelchipset.rst  resources.pptx
docs/source/: cli.rst  conf.py  index.rst
hooks/: bump-version
