# Metadata for setting up 
# Pyntel4004-CLI
[metadata]
name                =   Pyntel4004-cli
version             =   ENV_VERSION
py_modules          =   4004cli

description         = CLI (Command Line Interface for Pyntel4004)
url                 = https://github.com/alshapton/Pyntel4004-CLI/tree/main
download_url        = https://github.com/alshapton/Pyntel4004-CLI/tree/main
author              = Andrew Shapton
author_email        = alshapton@gmail.com
maintainer          = Andrew Shapton
maintainer_email    = alshapton@gmail.com
keywords            = python3, intel, 4004, CPU, Command Line
license             = MIT
platforms           = Linux, Darwin, Windows
project_urls        = 
        Documentation = https://pyntel4004-cli.readthedocs.io/en/release-0.0.1-alpha.3/index.html

[options]
python_requires     =   >=3.8
install_requires    =   
    Click
    Pyntel4004
setup_requires      =   pip
packages            =   find:

[options.entry_points]
console_scripts     =   
    4004 = 4004cli:cli

[options.packages.find]
where = .
